# godlife

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  main.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
apps/backend/: Dockerfile  alembic.ini  main.py
apps/backend/docs/: deployment-operations.md  repository-and-persistence-contract.md
apps/backend/migrations/: env.py  script.py.mako
apps/backend/migrations/versions/: 001_initial_persistence_schema.py  002_add_operability_fields.py  003_god38_schema_contract_alignment.py  004_add_summary_aggregates.py  005_god33_weight_columns_float.py
apps/backend/src/godlife_backend/: __init__.py
apps/frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
apps/frontend/app/: globals.css  layout.tsx  providers.tsx
apps/frontend/components/: dashboard-overview.tsx  notification-retry-form.tsx  page-header.tsx  plan-generate-form.tsx  side-nav.tsx  status-pill.tsx
apps/frontend/hooks/: use-dashboard-overview.ts  use-generate-plan.ts  use-retry-notification.ts
apps/frontend/lib/: api-error.test.ts  api-error.ts  types.ts
docs/: persistence-schema-contract.md
scripts/: setup-git-hooks.sh
tests/: test_backend_unit.py
tests/backend/: test_auth_router.py  test_exercise_plan_service.py  test_plans_router_generate.py  test_reading_reminder_service.py  test_reading_router.py  test_summary_router.py  test_summary_service.py  test_webhooks_notifications_flow.py
(+57 files in other folders)
