[project]
name = "godlife"
version = "0.1.0"
description = "Habit growth app for exercise and reading reminders"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.110",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pydantic>=2.7",
]

[dependency-groups]
dev = [
  "ruff>=0.4",
  "ty>=0.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "pre-commit>=3.7",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["godlife", "apps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-q",
  "--strict-markers",
  "--disable-warnings",
  "--cov=.",
  "--cov-report=term-missing",
]
